--- a/NaflimTools.WPF/Windows/MainWindow.xaml
+++ b/NaflimTools.WPF/Windows/MainWindow.xaml
@@ -6,10 +6,15 @@
         Icon="../Resources/Images/Ayano.ico"
         GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
         Title="主页" Height="500" Width="300">
-    <UniformGrid Columns="1" Rows="1">
+    <UniformGrid Columns="1" Rows="2">
         <Button Width="200" Height="50" FontSize="20" 
                 Style="{StaticResource MahApps.Styles.Button.Square.Accent}" 
                 BorderThickness="0"
                 Click="BatchRenameClick">批量重命名</Button>
+
+        <Button Width="200" Height="50" FontSize="20" 
+        Style="{StaticResource MahApps.Styles.Button.Square.Accent}" 
+        BorderThickness="0" metro:ControlsHelper.ContentCharacterCasing="Normal"
+        Click="ChatGPTClick">ChatGPT</Button>
     </UniformGrid>
 </metro:MetroWindow>
